--- a/doc/2026-02-03.md
+++ b/doc/2026-02-03.md
@@ -1,16 +1,45 @@
-API 호출 문서(`requests.http`) 생성을 완료했습니다.
+## 주문 마이크로 서비스 Saga 패턴 구현 - 진행 상황
 
-이 파일을 사용하려면:
+### 수정된 작업 계획 (To-Do List)
 
-1.  **Spring Boot 애플리케이션 실행:**
-    프로젝트 루트 디렉토리에서 다음 명령어를 실행하여 애플리케이션을 시작합니다.
-    ```bash
-    ./gradlew bootRun
-    ```
-2.  **API 호출:**
-    `http-client/requests.http` 파일을 VS Code (REST Client 확장 설치 필요) 또는 IntelliJ IDEA에서 연 후, `GET http://localhost:8080/hello` 라인 위에 표시되는 'Send Request' 버튼을 클릭하면 API가 호출되고 응답을 확인할 수 있습니다.
+#### 1단계: 동기식 처리 방식의 주문 서비스 구현
 
-이제 API를 호출할 준비가 되셨습니다. 다음 단계로 **수정된 작업 계획 (To-Do List)** 의 1단계 3번 항목인 **재고/적립금 서비스 (동기식) 연동 및 테스트**를 진행할까요?
+1.  **[완료]** 주문 도메인 및 테스트 케이스 생성
+2.  **[완료]** 기본 주문 생성 서비스 구현
+3.  **[완료]** 주문 번호 생성 로직 구현 및 테스트
+4.  **[완료]** API 엔드포인트 통합
+5.  **[진행중]** 재고/적립금 서비스 (동기식) 연동 및 테스트
+6.  **[대기중]** 주문 완료 로직 구현
+7.  **[대기중]** 주문 실패(재고/적립금 부족) 로직 구현
 
-1.  예, 재고/적립금 서비스 연동을 위한 파일을 생성하겠습니다.
-2.  아니요, 다른 작업을 원합니다.
+#### 2단계: Saga 패턴으로 리팩토링
+
+8.  **[대기중]** 이벤트 발행 로직 추가 (Saga 시작)
+9.  **[대기중]** 재고/적립금 서비스 리스너 구현 (비동기)
+10. **[대기중]** Saga 완료/실패 이벤트 처리
+11. **[대기중]** 보상 트랜잭션 구현
+
+---
+
+## 이전 작업 기록
+
+**2026-02-03**
+
+*   **API 호출 문서 (`requests.http`) 생성:**
+    *   `http-client` 디렉토리를 생성하고, `/hello` 및 `/orders` 엔드포인트를 호출하는 `requests.http` 파일을 생성했습니다.
+*   **주문 생성 API 엔드포인트 구현:**
+    *   사용자 요청에 따라 `OrderController`와 `CreateOrderRequest` DTO를 새로 생성하여 `POST /orders` API를 구현했습니다.
+*   **주문 번호 중복 재시도 통합 테스트 추가:**
+    *   `OrderIntegrationTest`에 `@SpyBean`을 사용하여 `OrderNumberGenerator`의 재시도 로직을 검증하는 테스트 케이스를 추가하고 통과함을 확인했습니다.
+*   **`OrderNumberGenerator` 통합:**
+    *   `OrderService`가 `OrderNumberGenerator`를 사용하도록 수정하고, 관련 테스트 코드들을 업데이트하여 통과함을 확인했습니다.
+*   **`OrderNumberGenerator` 구현 및 테스트 통과:**
+    *   `OrderNumberGenerator` 클래스를 구현하고, `OrderNumberGeneratorTest`를 실행하여 통과함을 확인했습니다.
+*   **주문 번호 생성 로직 구현 선행:**
+    *   사용자의 요청에 따라 `Stock/Point` 서비스 연동보다 주문 번호 생성 로직을 먼저 구현했습니다.
+*   **통합/단위 테스트 케이스 추가 및 성공 확인:**
+    *   `OrderService`의 DB 연동을 검증하는 `OrderIntegrationTest`와 기본 로직을 검증하는 `OrderServiceTest`를 모두 성공적으로 실행했습니다.
+*   **기본 도메인 및 서비스 구조 생성:**
+    *   `Order`, `OrderStatus`, `OrderRepository`, `OrderService` 등 초기 파일 구조를 생성했습니다.
+*   **Saga 구현 계획 수정:**
+    *   사용자 요청에 따라 동기 처리 방식 구현 후 Saga 패턴으로 리팩토링하는 2단계 계획으로 수정했습니다.
