롤백 처리에 대한 기술 문의

--- a/doc/2026-02-27.md
+++ b/doc/2026-02-27.md
@@ -1,17 +1,36 @@
 # 2026년 2월 27일
 
-## 오늘의 작업 요약
-- **1단계 동기식 주문 서비스 완수:** 
-  - 재고/적립금 연동 및 동기식 트랜잭션(롤백 포함) 구현 완료.
-  - 실제 MySQL(`local` 프로필) 기반 통합 테스트 성공.
-- **고도화된 리팩토링 수행:**
-  - **도메인 무결성:** `Order` 엔티티 내 `private` 생성자, 정적 팩토리 메서드(`create`), 내부 검증 로직(`validate`) 도입.
-  - **API 보안:** `jakarta.validation`을 이용한 DTO 검증 및 컨트롤러 `@Valid` 적용.
-- **기술적 이슈 해결:**
-  - H2/MySQL 예약어 충돌 해결을 위한 테이블 명 변경 (`orders` -> `eda_order`).
-  - 테스트 프로파일(`local`) 안정화 및 Dialect 자동 감지 설정.
-- **문서화:** 
-  - 세미나 자료 `06.동기식_주문_서비스_구현_완료_및_테스트_전략.md` 작성 및 리팩토링 상세 내용 보강.
+## 향후 작업 계획 (To-Do List)
 
-## 향후 계획
-- **2단계 Saga 패턴 진입:** 비동기 메시징 기반의 EDA 아키텍처로 전환 준비.
+### 1단계: 동기식 처리 방식의 주문 서비스 완성 (완료)
+- [x] **5-1. 재고(Stock) 서비스 연동 및 테스트:** 주문 생성 시 재고를 확인하고 차감하는 로직 구현. (완료)
+- [x] **5-2. 적립금(Point) 서비스 연동 및 테스트:** 주문 생성 시 적립금을 확인하고 차감하는 로직 구현. (완료)
+- [x] **6. 주문 완료 로직 구현:** 모든 외부 서비스 호출이 성공하면 주문 상태를 `COMPLETED`로 변경. (완료)
+- [x] **7. 주문 실패 처리 로직 구현:** 재고나 적립금이 부족할 경우 주문을 취소(`CANCELLED`)하고 예외 처리. (완료)
+- [x] **리팩토링:** 도메인 유효성 검증, 정적 팩토리 메서드, Bean Validation 적용 완료. (완료)
+
+### 2단계: Saga 패턴으로 리팩토링 (EDA 전환 예정)
+- [ ] **8. 이벤트 발행 로직 추가:** 주문 생성 시 "주문 생성됨" 이벤트를 발행하여 Saga 시작.
+- [ ] **9. 비동기 리스너 구현:** 재고 및 적립금 서비스가 이벤트를 구독하여 처리하도록 변경.
+- [ ] **10. Saga 완료/실패 이벤트 처리:** 각 서비스의 처리 결과에 따라 주문 상태를 최종 업데이트.
+- [ ] **11. 보상 트랜잭션 구현:** 중간에 실패할 경우 이미 처리된 작업을 취소하는 로직 추가.
+
+---
+
+## 오늘의 작업 진행
+
+### 1. 1단계 주문 서비스 구현 마무리
+- 재고/적립금 연동 및 동기식 트랜잭션(롤백 포함) 구현 완료.
+- 실제 MySQL(`local` 프로필) 기반 통합 테스트 성공.
+
+### 2. 코드 품질 리팩토링 성공
+- 도메인 무결성(Validation, Static Factory) 및 API 입력 검증 적용.
+- 리팩토링 후 모든 단위/통합 테스트 통과 확인.
+
+### 3. 주문 완료 상태(`COMPLETED`) 로직 구현 및 테스트
+- `Order` 도메인에 `complete()` 메서드 추가.
+- `OrderService`에서 외부 서비스 호출 성공 시 `order.complete()` 호출 후 저장하도록 수정.
+
+## 기술적 고찰 (Deep Dive)
+- **트랜잭션 롤백과 가시성:** 현재 동기식 방식에서 `RuntimeException` 발생 시 전체 트랜잭션이 롤백되어, 실패한 주문의 이력(CANCELLED 상태)이 DB에 남지 않는 현상을 확인.
+- **해결 방향:** 이는 단일 트랜잭션 모델의 특징이며, 실패 이력을 남기기 위해서는 주문을 먼저 영속화한 후 상태를 업데이트하거나, 향후 도입할 Saga 패턴을 통해 비동기적으로 상태를 관리해야 함.
