saga 패턴 적용, 순차적 코레오 그래피

--- a/doc/2026-02-27.md
+++ b/doc/2026-02-27.md
@@ -1,36 +1,47 @@
 # 2026년 2월 27일
 
+## 작업 요약 (Executive Summary)
+- **1단계 동기식 주문 서비스 완수:** 
+  - 재고/적립금 연동 및 동기식 트랜잭션(롤백 포함) 구현 완료.
+  - 도메인 무결성(Validation, Static Factory) 및 API 입력 검증 적용.
+  - 실제 MySQL(`local` 프로필) 기반 통합 테스트 성공.
+- **2단계 비동기 코레오그래피 Saga 구현 성공:**
+  - `OrderCreatedEvent` -> `StockDeductedEvent` -> `PointDeductedEvent` 체인 구축.
+  - `@TransactionalEventListener`와 `REQUIRES_NEW`를 적용하여 트랜잭션과 이벤트 정합성 확보.
+  - 실패 시 `CANCELLED` 상태 보존을 통한 비즈니스 가시성 확보.
+- **세미나 자료 작성 (3종):** 
+  - `06.동기식_주문_서비스_구현_완료_및_테스트_전략.md`
+  - `07.Saga_패턴_도입_및_비동기_이벤트_기반_아키텍처_전환.md`
+  - `08.Saga_패턴_심화_순차_vs_병렬_구조_설계_전략.md`
+
 ## 향후 작업 계획 (To-Do List)
-
-### 1단계: 동기식 처리 방식의 주문 서비스 완성 (완료)
-- [x] **5-1. 재고(Stock) 서비스 연동 및 테스트:** 주문 생성 시 재고를 확인하고 차감하는 로직 구현. (완료)
-- [x] **5-2. 적립금(Point) 서비스 연동 및 테스트:** 주문 생성 시 적립금을 확인하고 차감하는 로직 구현. (완료)
-- [x] **6. 주문 완료 로직 구현:** 모든 외부 서비스 호출이 성공하면 주문 상태를 `COMPLETED`로 변경. (완료)
-- [x] **7. 주문 실패 처리 로직 구현:** 재고나 적립금이 부족할 경우 주문을 취소(`CANCELLED`)하고 예외 처리. (완료)
-- [x] **리팩토링:** 도메인 유효성 검증, 정적 팩토리 메서드, Bean Validation 적용 완료. (완료)
-
-### 2단계: Saga 패턴으로 리팩토링 (EDA 전환 예정)
-- [ ] **8. 이벤트 발행 로직 추가:** 주문 생성 시 "주문 생성됨" 이벤트를 발행하여 Saga 시작.
-- [ ] **9. 비동기 리스너 구현:** 재고 및 적립금 서비스가 이벤트를 구독하여 처리하도록 변경.
-- [ ] **10. Saga 완료/실패 이벤트 처리:** 각 서비스의 처리 결과에 따라 주문 상태를 최종 업데이트.
-- [ ] **11. 보상 트랜잭션 구현:** 중간에 실패할 경우 이미 처리된 작업을 취소하는 로직 추가.
+- [x] **1단계: 동기식 처리 방식의 주문 서비스 완성**
+- [x] **2단계: Saga 패턴으로 리팩토링 (EDA 전환)**
+- [ ] **3단계: Kafka 도입 및 분산 환경 구축:** 외부 메시지 브로커를 통한 실제 마이크로서비스 확장.
+- [ ] **4단계: Observability 설정:** 분산 트랜잭션 모니터링 및 흐름 추적.
 
 ---
 
-## 오늘의 작업 진행
-
-### 1. 1단계 주문 서비스 구현 마무리
-- 재고/적립금 연동 및 동기식 트랜잭션(롤백 포함) 구현 완료.
-- 실제 MySQL(`local` 프로필) 기반 통합 테스트 성공.
-
-### 2. 코드 품질 리팩토링 성공
-- 도메인 무결성(Validation, Static Factory) 및 API 입력 검증 적용.
-- 리팩토링 후 모든 단위/통합 테스트 통과 확인.
-
-### 3. 주문 완료 상태(`COMPLETED`) 로직 구현 및 테스트
-- `Order` 도메인에 `complete()` 메서드 추가.
-- `OrderService`에서 외부 서비스 호출 성공 시 `order.complete()` 호출 후 저장하도록 수정.
-
 ## 기술적 고찰 (Deep Dive)
-- **트랜잭션 롤백과 가시성:** 현재 동기식 방식에서 `RuntimeException` 발생 시 전체 트랜잭션이 롤백되어, 실패한 주문의 이력(CANCELLED 상태)이 DB에 남지 않는 현상을 확인.
-- **해결 방향:** 이는 단일 트랜잭션 모델의 특징이며, 실패 이력을 남기기 위해서는 주문을 먼저 영속화한 후 상태를 업데이트하거나, 향후 도입할 Saga 패턴을 통해 비동기적으로 상태를 관리해야 함.
+
+### 1. 비동기 환경에서의 순서 보장 (Event Chaining)
+- 각 리스너가 앞 단계의 '성공 이벤트'를 자신의 '구독 이벤트'로 설정함으로써 논리적인 실행 순서를 강제함.
+- 이를 통해 중앙 관리자 없이도 분산 서비스 간의 정교한 워크플로우 제어가 가능함을 확인.
+
+### 2. 순차적(Sequential) vs 병렬적(Parallel) 설계
+- **순차적 구조:** 비즈니스 선후 관계가 명확할 때 안전하고 직관적인 구현 가능 (현재 적용 방식).
+- **병렬적 구조:** 독립적인 작업들의 성능을 극대화할 수 있으나, 모든 결과의 취합(Join) 및 복잡한 보상 트랜잭션 관리가 필요함.
+
+### 3. TransactionalEventListener의 신뢰성과 한계
+- **장점:** `AFTER_COMMIT`을 통해 '유령 이벤트'를 방지하고 데이터 가시성을 확보함.
+- **위험 요소:** commit 성공 후 리스너 실행 직전에 시스템 장애가 발생하면 '이벤트 유실'이 일어날 수 있음.
+- **해결책:** 향후 **Transactional Outbox Pattern**을 도입하여 데이터와 이벤트를 동일 트랜잭션으로 저장하는 구조로 개선 필요.
+
+---
+
+## 오늘의 작업 진행 상세
+1.  **동기식 연동:** `DeductStockPort`, `DeductPointPort` 인터페이스 및 어댑터 구현.
+2.  **예약어 해결:** `orders` 테이블을 `eda_order`로 변경하여 H2/MySQL 충돌 해결.
+3.  **코드 품질:** 정적 팩토리 메서드 및 `jakarta.validation` 도입.
+4.  **비동기 전환:** `OrderService`에서 이벤트 발행으로 전환 및 각 서비스 리스너 구현.
+5.  **트랜잭션 최적화:** `Propagation.REQUIRES_NEW`를 통한 독립 트랜잭션 확보 및 테스트 성공.
